--- a/Pyspark Exploration Notebook.ipynb
+++ b/Pyspark Exploration Notebook.ipynb
@@ -18,6 +18,7 @@
     "import pyspark\n",
     "from pyspark.sql.functions import *\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
+    "from pyspark.sql.types import StringType\n",
     "\n",
     "warnings.filterwarnings(action='once')\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,17 +176,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make census tract columns in origin-destination data"
+    "Make census tract and state columns in origin-destination data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "od = od.withColumn('h_tract', substring(od.h_geocode, 0, 11))\\\n",
     "        .withColumn('w_tract', substring(od.w_geocode, 0, 11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "od = od.withColumn('h_state', substring(od.h_geocode, 0, 2))\\\n",
+    "        .withColumn('w_state', substring(od.w_geocode, 0, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(w_geocode=u'271630714002025', h_geocode=u'271630712082020', s000=1, sa01=0, sa02=1, sa03=0, se01=0, se02=1, se03=0, si01=1, si02=0, si03=0, createdate=u'20160219', year=2012, h_tract=u'27163071208', w_tract=u'27163071400', h_state=u'27', w_state=u'27')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "od.take(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make state column in drive data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drive = drive.withColumn('from_state', substring(drive.from_tract, 0, 2))\\\n",
+    "            .withColumn('to_state', substring(drive.to_tract, 0, 2))"
    ]
   },
   {
@@ -197,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -253,6 +303,8 @@
        " 'year',\n",
        " 'h_tract',\n",
        " 'w_tract',\n",
+       " 'h_state',\n",
+       " 'w_state',\n",
        " 'sa_total',\n",
        " 'se_total',\n",
        " 'si_total',\n",
@@ -267,7 +319,7 @@
        " 'si03_pct']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,17 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(137) MapPartitionsRDD[53] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[52] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[51] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   FileScanRDD[50] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
+      "(137) MapPartitionsRDD[31] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[30] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[29] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   FileScanRDD[28] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
      ]
     }
    ],
@@ -305,17 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8) MapPartitionsRDD[57] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  MapPartitionsRDD[56] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  MapPartitionsRDD[55] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  FileScanRDD[54] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
+      "(8) MapPartitionsRDD[35] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|  MapPartitionsRDD[34] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|  MapPartitionsRDD[33] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|  FileScanRDD[32] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
      ]
     }
    ],
@@ -325,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +386,7 @@
        "137"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -344,7 +396,7 @@
        "8"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Join origin-destination and driving dataframes"
+    "### Join: origin-destination and driving dataframes"
    ]
   },
   {
@@ -371,11 +423,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "od = od.repartition(8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try working with just California data first, where origin and destination are state code 06"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "od_ca = od.where(\"h_state == 06\" and \"w_state == 06\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drive_ca = drive.where('to_state == 06' and 'from_state == 06')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ca = od_ca.join(drive_ca, [drive.from_tract == od.h_tract, drive.to_tract == od.w_tract])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ca.limit(1).collect()"
    ]
   },
   {
@@ -388,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,52 +499,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.rdd.getNumPartitions()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(200) MapPartitionsRDD[73] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[72] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[71] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   ZippedPartitionsRDD2[70] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[64] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   ShuffledRowRDD[63] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "+-(8) MapPartitionsRDD[62] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  ShuffledRowRDD[61] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "+-(137) MapPartitionsRDD[60] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[59] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   FileScanRDD[58] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[69] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   ShuffledRowRDD[68] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "+-(8) MapPartitionsRDD[67] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  MapPartitionsRDD[66] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  FileScanRDD[65] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "debug(df)"
    ]
@@ -458,28 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Grouped aggregation - average travel time by year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[year: int, avg(si01_pct): double]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "agg_df = df.groupBy(\"year\").agg(avg(\"si01_pct\"))\n",
-    "display(agg_df)\n",
-    "agg_df.collect()"
+    "### Grouped aggregation: average proportion of goods-producing jobs per year"
    ]
   },
   {
@@ -487,7 +527,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df.withColumn(\"year\", df.year.cast(StringType()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_df = df.groupBy(\"year\").agg(avg(\"si01_pct\"))\n",
+    "display(agg_df)\n",
+    "agg_df.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Window function: "
+   ]
   },
   {
    "cell_type": "code",
