--- a/Pyspark Exploration Notebook.ipynb
+++ b/Pyspark Exploration Notebook.ipynb
@@ -16,7 +16,10 @@
    "outputs": [],
    "source": [
     "import pyspark\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "from pyspark.sql.functions import *\n",
+    "from pyspark.sql.window import Window\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "from pyspark.sql.types import StringType\n",
     "\n",
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +322,7 @@
        " 'si03_pct']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,17 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(137) MapPartitionsRDD[31] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[30] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[29] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   FileScanRDD[28] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
+      "(137) MapPartitionsRDD[28] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[27] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[26] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   FileScanRDD[25] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
      ]
     }
    ],
@@ -357,17 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8) MapPartitionsRDD[35] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  MapPartitionsRDD[34] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  MapPartitionsRDD[33] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  FileScanRDD[32] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
+      "(33) MapPartitionsRDD[32] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[31] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[30] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   FileScanRDD[29] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
      ]
     }
    ],
@@ -377,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -386,17 +389,17 @@
        "137"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "8"
+       "33"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +413,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Join: origin-destination and driving dataframes"
+    "### Join: origin-destination and driving dataframes  \n",
+    "Assumption: travel time and distance for a census tract is the same for all its comprising block groups."
    ]
   },
   {
@@ -423,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,12 +438,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try working with just California data first, where origin and destination are state code 06"
+    "Try working with just California data first, where origin and destination are state code 06  \n",
+    "Join od_ca and drive_ca"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,9 +471,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(w_geocode=u'060014355001011', h_geocode=u'060014001001036', s000=1, sa01=1, sa02=0, sa03=0, se01=0, se02=1, se03=0, si01=0, si02=0, si03=1, createdate=u'20170919', year=2015, h_tract=u'06001400100', w_tract=u'06001435500', h_state=u'06', w_state=u'06', sa_total=1, se_total=1, si_total=1, sa01_pct=1.0, sa02_pct=0.0, sa03_pct=0.0, se01_pct=0.0, se02_pct=1.0, se03_pct=0.0, si01_pct=0.0, si02_pct=0.0, si03_pct=1.0, from_tract=u'06001400100', to_tract=u'06001435500', miles=16.9, minutes=24.2, from_state=u'06', to_state=u'06')]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_ca.limit(1).collect()"
    ]
@@ -477,8 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Left join join with driving, giving us travel times for each origin-destination pair.  \n",
-    "Assumption: travel time and distance for a census tract is the same for all its comprising block groups."
+    "Join full od with driving, giving us travel times for each origin-destination pair.  "
    ]
   },
   {
@@ -487,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = od.join(drive, [drive.from_tract == od.h_tract, drive.to_tract == od.w_tract])"
+    "#df = od.join(drive, [drive.from_tract == od.h_tract, drive.to_tract == od.w_tract])"
    ]
   },
   {
@@ -503,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rdd.getNumPartitions()"
+    "#df.rdd.getNumPartitions()"
    ]
   },
   {
@@ -512,14 +527,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "debug(df)"
+    "#debug(df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Grouped aggregation: average proportion of goods-producing jobs per year"
+    "### Grouped aggregation: (block group level) average proportion of goods-producing jobs per year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, start with California only  \n",
+    "\n",
+    "The proportion of jobs in California in Goods Producing industry sectors has steadily declined over the past decade."
    ]
   },
   {
@@ -528,7 +552,161 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.withColumn(\"year\", df.year.cast(StringType()))"
+    "#df_ca = df_ca.withColumn(\"year\", df_ca.year.cast(StringType()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "agg_ca = df_ca.groupBy(\"year\").agg(avg(\"si01_pct\"))\n",
+    "results_ca = agg_ca.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_ca_df = pd.DataFrame(results_ca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>avg_si01_pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>0.199606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>0.193124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>0.192965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>0.193048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>0.189356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>0.185661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>0.175127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.164687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>0.153194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>0.152197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>0.150283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>0.150137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>0.153326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>0.154347</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year  avg_si01_pct\n",
+       "13  2002      0.199606\n",
+       "0   2003      0.193124\n",
+       "6   2004      0.192965\n",
+       "9   2005      0.193048\n",
+       "3   2006      0.189356\n",
+       "1   2007      0.185661\n",
+       "12  2008      0.175127\n",
+       "8   2009      0.164687\n",
+       "10  2010      0.153194\n",
+       "11  2011      0.152197\n",
+       "7   2012      0.150283\n",
+       "4   2013      0.150137\n",
+       "5   2014      0.153326\n",
+       "2   2015      0.154347"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agg_ca_df.columns = ['year', 'avg_si01_pct']\n",
+    "agg_ca_df.sort_values('year')"
    ]
   },
   {
@@ -537,9 +715,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agg_df = df.groupBy(\"year\").agg(avg(\"si01_pct\"))\n",
-    "display(agg_df)\n",
-    "agg_df.collect()"
+    "agg_ca1 = df_ca.groupBy(\"year\").agg(sum(\"si01\"), sum('si02'), sum('si03'))\n",
+    "results_ca1 = agg_ca1.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_ca_df1 = pd.DataFrame(results_ca1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_ca_df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now do it for the whole country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = df.withColumn(\"year\", df.year.cast(StringType()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#agg_full = df.groupBy(\"year\").agg(avg(\"si01_pct\"))\n",
+    "#results_full = agg_full.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#agg_full_df = pd.DataFrame(results_full)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#agg_full_df"
    ]
   },
   {
@@ -554,7 +809,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df.withColumn(\"year\", df.year.cast(IntegerType()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window = Window.orderBy(\"year\").partitionBy(\"h_geocode\", \"w_geocode\").rangeBetween(-1, 1)"
+   ]
   },
   {
    "cell_type": "code",
