--- a/Pyspark Exploration Notebook.ipynb
+++ b/Pyspark Exploration Notebook.ipynb
@@ -493,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Join full od with driving, giving us travel times for each origin-destination pair.  "
+    "Now join full od with driving, giving us travel times for each origin-destination pair.  "
    ]
   },
   {
@@ -534,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Grouped aggregation: (block group level) average proportion of goods-producing jobs per year"
+    "### Grouped aggregation: proportion of goods-producing jobs per year"
    ]
   },
   {
@@ -543,42 +543,50 @@
    "source": [
     "Again, start with California only  \n",
     "\n",
-    "The proportion of jobs in California in Goods Producing industry sectors has steadily declined over the past decade."
+    "The proportion of jobs in California in Goods Producing industry sectors (\"si01\") has steadily declined over the past decade as the economy moved away from manufacturing and towards services"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_ca = df_ca.withColumn(\"year\", df_ca.year.cast(StringType()))"
+    "agg_ca1 = df_ca.groupBy(\"year\").agg(sum(\"si01\"), sum('si02'), sum('si03'))\n",
+    "results_ca1 = agg_ca1.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "agg_ca = df_ca.groupBy(\"year\").agg(avg(\"si01_pct\"))\n",
-    "results_ca = agg_ca.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "agg_ca_df = pd.DataFrame(results_ca)"
+    "agg_ca_df1 = pd.DataFrame(results_ca1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_ca_df1.columns = ['year', 'si01', 'si02', 'si03']\n",
+    "agg_ca_df1['total_jobs'] = agg_ca_df1.si01 + agg_ca_df1.si02 + agg_ca_df1.si03"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_ca_df1['pct_si01'] = agg_ca_df1.si01 / agg_ca_df1.total_jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -603,153 +611,170 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>year</th>\n",
-       "      <th>avg_si01_pct</th>\n",
+       "      <th>si01</th>\n",
+       "      <th>si02</th>\n",
+       "      <th>si03</th>\n",
+       "      <th>total_jobs</th>\n",
+       "      <th>pct_si01</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>2002</td>\n",
-       "      <td>0.199606</td>\n",
+       "      <td>1061707</td>\n",
+       "      <td>1033147</td>\n",
+       "      <td>3245012</td>\n",
+       "      <td>5339866</td>\n",
+       "      <td>0.198827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2003</td>\n",
-       "      <td>0.193124</td>\n",
+       "      <td>1019401</td>\n",
+       "      <td>1024673</td>\n",
+       "      <td>3263365</td>\n",
+       "      <td>5307439</td>\n",
+       "      <td>0.192070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2004</td>\n",
-       "      <td>0.192965</td>\n",
+       "      <td>1028667</td>\n",
+       "      <td>1022742</td>\n",
+       "      <td>3306224</td>\n",
+       "      <td>5357633</td>\n",
+       "      <td>0.192000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2005</td>\n",
-       "      <td>0.193048</td>\n",
+       "      <td>1052749</td>\n",
+       "      <td>1053289</td>\n",
+       "      <td>3372850</td>\n",
+       "      <td>5478888</td>\n",
+       "      <td>0.192146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2006</td>\n",
-       "      <td>0.189356</td>\n",
+       "      <td>1045599</td>\n",
+       "      <td>1071275</td>\n",
+       "      <td>3441228</td>\n",
+       "      <td>5558102</td>\n",
+       "      <td>0.188122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2007</td>\n",
-       "      <td>0.185661</td>\n",
+       "      <td>1025099</td>\n",
+       "      <td>1065219</td>\n",
+       "      <td>3474935</td>\n",
+       "      <td>5565253</td>\n",
+       "      <td>0.184196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>2008</td>\n",
-       "      <td>0.175127</td>\n",
+       "      <td>967440</td>\n",
+       "      <td>1052308</td>\n",
+       "      <td>3553468</td>\n",
+       "      <td>5573216</td>\n",
+       "      <td>0.173587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2009</td>\n",
-       "      <td>0.164687</td>\n",
+       "      <td>877083</td>\n",
+       "      <td>977576</td>\n",
+       "      <td>3534286</td>\n",
+       "      <td>5388945</td>\n",
+       "      <td>0.162756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>2010</td>\n",
-       "      <td>0.153194</td>\n",
+       "      <td>823689</td>\n",
+       "      <td>978019</td>\n",
+       "      <td>3610732</td>\n",
+       "      <td>5412440</td>\n",
+       "      <td>0.152184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>2011</td>\n",
-       "      <td>0.152197</td>\n",
+       "      <td>827560</td>\n",
+       "      <td>1009758</td>\n",
+       "      <td>3651098</td>\n",
+       "      <td>5488416</td>\n",
+       "      <td>0.150783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2012</td>\n",
-       "      <td>0.150283</td>\n",
+       "      <td>824822</td>\n",
+       "      <td>1018812</td>\n",
+       "      <td>3702850</td>\n",
+       "      <td>5546484</td>\n",
+       "      <td>0.148711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2013</td>\n",
-       "      <td>0.150137</td>\n",
+       "      <td>847619</td>\n",
+       "      <td>1048702</td>\n",
+       "      <td>3813783</td>\n",
+       "      <td>5710104</td>\n",
+       "      <td>0.148442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2014</td>\n",
-       "      <td>0.153326</td>\n",
+       "      <td>891843</td>\n",
+       "      <td>1067155</td>\n",
+       "      <td>3908049</td>\n",
+       "      <td>5867047</td>\n",
+       "      <td>0.152009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2015</td>\n",
-       "      <td>0.154347</td>\n",
+       "      <td>939611</td>\n",
+       "      <td>1108226</td>\n",
+       "      <td>4070729</td>\n",
+       "      <td>6118566</td>\n",
+       "      <td>0.153567</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    year  avg_si01_pct\n",
-       "13  2002      0.199606\n",
-       "0   2003      0.193124\n",
-       "6   2004      0.192965\n",
-       "9   2005      0.193048\n",
-       "3   2006      0.189356\n",
-       "1   2007      0.185661\n",
-       "12  2008      0.175127\n",
-       "8   2009      0.164687\n",
-       "10  2010      0.153194\n",
-       "11  2011      0.152197\n",
-       "7   2012      0.150283\n",
-       "4   2013      0.150137\n",
-       "5   2014      0.153326\n",
-       "2   2015      0.154347"
+       "    year     si01     si02     si03  total_jobs  pct_si01\n",
+       "13  2002  1061707  1033147  3245012     5339866  0.198827\n",
+       "0   2003  1019401  1024673  3263365     5307439  0.192070\n",
+       "6   2004  1028667  1022742  3306224     5357633  0.192000\n",
+       "9   2005  1052749  1053289  3372850     5478888  0.192146\n",
+       "3   2006  1045599  1071275  3441228     5558102  0.188122\n",
+       "1   2007  1025099  1065219  3474935     5565253  0.184196\n",
+       "12  2008   967440  1052308  3553468     5573216  0.173587\n",
+       "8   2009   877083   977576  3534286     5388945  0.162756\n",
+       "10  2010   823689   978019  3610732     5412440  0.152184\n",
+       "11  2011   827560  1009758  3651098     5488416  0.150783\n",
+       "7   2012   824822  1018812  3702850     5546484  0.148711\n",
+       "4   2013   847619  1048702  3813783     5710104  0.148442\n",
+       "5   2014   891843  1067155  3908049     5867047  0.152009\n",
+       "2   2015   939611  1108226  4070729     6118566  0.153567"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agg_ca_df.columns = ['year', 'avg_si01_pct']\n",
-    "agg_ca_df.sort_values('year')"
+    "agg_ca_df1.sort_values('year')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agg_ca1 = df_ca.groupBy(\"year\").agg(sum(\"si01\"), sum('si02'), sum('si03'))\n",
-    "results_ca1 = agg_ca1.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agg_ca_df1 = pd.DataFrame(results_ca1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agg_ca_df1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -763,9 +788,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#df = df.withColumn(\"year\", df.year.cast(StringType()))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -774,34 +797,105 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "#agg_full = df.groupBy(\"year\").agg(avg(\"si01_pct\"))\n",
-    "#results_full = agg_full.collect()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#agg_full_df = pd.DataFrame(results_full)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#agg_full_df"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Window function: "
+    "### Window function: average total jobs over time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window = Window.partitionBy(\"h_geocode\", \"w_geocode\")\\\n",
+    "            .orderBy(\"year\")\\\n",
+    "            .rowsBetween(Window.currentRow -1, Window.currentRow + 1)\n",
+    "avg_jobs = avg(df_ca.s000).over(window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+---------------+---------------+------------------+\n",
+      "|year|      h_geocode|      w_geocode|          avg_jobs|\n",
+      "+----+---------------+---------------+------------------+\n",
+      "|2005|060014001001007|060014040002005|               1.0|\n",
+      "|2010|060014001001007|060014040002005|               1.0|\n",
+      "|2011|060014001001007|060014040002005|               1.0|\n",
+      "|2014|060014001001007|060014040002005|1.3333333333333333|\n",
+      "|2015|060014001001007|060014040002005|               1.5|\n",
+      "|2002|060014001001007|060014239022001|               1.0|\n",
+      "|2003|060014001001007|060014239022001|               1.0|\n",
+      "|2008|060014001001007|060014239022001|               1.0|\n",
+      "|2011|060014001001007|060014251022007|               1.0|\n",
+      "|2013|060014001001007|060014403352017|               1.0|\n",
+      "+----+---------------+---------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_ca.select('year', 'h_geocode', 'w_geocode', avg_jobs.alias(\"avg_jobs\")).limit(10).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reshape data from long to wide"
    ]
   },
   {
@@ -810,7 +904,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.withColumn(\"year\", df.year.cast(IntegerType()))"
+    "pivoted = df_ca.groupBy('h_geocode', 'w_geocode')\\\n",
+    "            .pivot('year')\\\n",
+    "            .agg(sum('s000'))"
    ]
   },
   {
@@ -819,29 +915,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "window = Window.orderBy(\"year\").partitionBy(\"h_geocode\", \"w_geocode\").rangeBetween(-1, 1)"
+    "pivoted.take(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
